add name option in passive-cables

--- a/input.html
+++ b/input.html
@@ -75,7 +75,7 @@
                 <div class="form-group">
                         <label class="control-label col-sm-2" for="name-active">Enter name of Asset:</label>
                         <div class="col-sm-10">          
-                          <input type="text" class="form-control" id="name-active" placeholder="Enter name" name="name-active">
+                          <input type="text" class="form-control" id="name-active" placeholder="Switches/ Server/ Wireless Controller/ ..." name="name-active">
                         </div>
                 </div>
             <div class = "form-group">
@@ -203,10 +203,16 @@
                             <option value="pigtail">Pigtail Cable</option>
                             <option value="ethernet">Ethernet Cable</option>
                             <option value="patch-cord">Patch Cord</option>
-                            <option value="computer-cable">Computer Cable</option>
-                            <option value="audio-video">Audio/Video Cable</option>
+                            <option value="computer-cable">Computer Cable (VGA / Power Cords / ...)</option>
+                            <option value="audio-video">Audio/Video Cable (HDMI / DVI / Coax / ...)</option>
                         </select>
                     </div>
+              </div>
+              <div class="form-group">
+                <label class="control-label col-sm-2" for="name-cables">Enter name of Asset:</label>
+                <div class="col-sm-10">          
+                  <input type="text" class="form-control" id="name-cables" placeholder="UTP Patch Cord/ HDMI/ Aux/ Power/ ..." name="name-active">
+                </div>
               </div>
               <div class = "form-group">
                 <label class="control-label col-sm-2" for="length-cable">Length: </label>
