--- a/input.html
+++ b/input.html
@@ -152,7 +152,7 @@
                 <div class = "form-group">
                     <label for="type-active" class ="control-label col-sm-2">Ports: </label>
                     <div class = "col-sm-10">
-                        <input type="text" class = "form-control" id = "type-active" placeholder="8/16/24/48 ..." name="type-active">
+                        <input type="number" class = "form-control" id = "type-active" placeholder="8/16/24/48 ..." name="type-active">
                     </div>
                 </div>
                 <div class = "form-group">
