--- a/input.html
+++ b/input.html
@@ -89,7 +89,7 @@
                 document.getElementById("ifPrinter").style.display = "none";
             }
             if(that.value == "projector") {
-                document.getElementById("ifWProjector").style.display = "block";
+                document.getElementById("ifProjector").style.display = "block";
             } else {
                 document.getElementById("ifProjector").style.display = "none";
             }
