--- a/input.html
+++ b/input.html
@@ -89,7 +89,7 @@
                 document.getElementById("ifPrinter").style.display = "none";
             }
             if(that.value == "projector") {
-                document.getElementById("ifWProjector").style.display = "block";
+                document.getElementById("ifProjector").style.display = "block";
             } else {
                 document.getElementById("ifProjector").style.display = "none";
             }
@@ -353,7 +353,11 @@
             <div class = "form-group">
                 <label for="type-computers" class ="control-label col-sm-2">Type: </label>
                 <div class = "col-sm-10">
-                    <input type="text" class = "form-control" id = "type-computers" placeholder="laptop/Desktop ..." name="type-computers">
+                    <!-- <input type="text" class = "form-control" id = "type-computers" placeholder="laptop/Desktop ..." name="type-computers"> -->
+                    <select name="type-computers" id="type-computers" class="form-control">
+                        <option value="laptop">laptop</option>
+                        <option value="Desktop">Desktop</option>
+                    </select>
                 </div>
             </div>
             <div class = "form-group">
