--- a/input.html
+++ b/input.html
@@ -14,28 +14,27 @@
             } else {
                 document.getElementById("ifActive").style.display = "none";
             }
-            if(that.value == "passive") {
-                document.getElementById("ifPassive").style.display = "block";
-            } else {
-                document.getElementById("ifPassive").style.display = "none";
-            }
+            // if(that.value == "passive") {
+            //     document.getElementById("ifPassive").style.display = "block";
+            // } else {
+            //     document.getElementById("ifPassive").style.display = "none";
+            // }
             if(that.value == "active-computers") {
                 document.getElementById("ifComputers").style.display = "block";
             } else {
                 document.getElementById("ifComputers").style.display = "none";
             }
-        }
-
-        function passiveTypeCheck(that) {
-            if(that.value == "cables") {
-                document.getElementById("ifCables").style.display = "block";
-            } else {
-                document.getElementById("ifCables").style.display = "none";
+            if(that.value == "passive-cables") {
+                document.getElementById("ifPassiveCables").style.display = "block";
             }
-            if (that.value == "hardware") {
-                document.getElementById("ifHardware").style.display = "block";
-            } else {
-                document.getElementById("ifHardware").style.display = "none";
+            else {
+                document.getElementById("ifPassiveCables").style.display = "none";
+            }
+            if(that.value == "passive-hardware") {
+                document.getElementById("ifPassiveHardware").style.display = "block";
+            }
+            else {
+                document.getElementById("ifPassiveHardware").style.display="none";
             }
         }
 
@@ -117,7 +116,8 @@
                     <option value="" disabled selected>Select your option</option>
                     <option value = "active">Active</option>
                     <option value = "active-computers">Active - Computers</option>
-                    <option value = "passive">Passive</option>
+                    <option value = "passive-cables">Passive - Cables</option>
+                    <option value= "passive-hardware">Passive - Hardware</option>
                   </select>
             </div>
           </div>
@@ -161,6 +161,11 @@
                         <input type="text" class = "form-control" id = "make-active" placeholder="Cisco/Juniper/HP ..." name="make-active">
                     </div>
                 </div>
+                <div class = "form-group">
+                    <label class="control-label col-sm-2" class ="control-label col-sm-2" for="remarks-active">Remarks:</label>
+                    <input class="form-control input-lg" id="remarks-active" type="text">
+                </div>
+                
             </div>
             <!-- to display if server is selected -->
             <div id = "ifServer" style = "display:none;">
@@ -193,6 +198,10 @@
                         <input type="number" class = "form-control" id = "function-active" placeholder="Enter generation" name="function-active">
                     </div>
                 </div>
+                <div class = "form-group">
+                    <label class="control-label col-sm-2" class ="control-label col-sm-2" for="remarks-active">Remarks:</label>
+                    <input class="form-control input-lg" id="remarks-active" type="text">
+                </div>
             </div>
             <!-- to display if wireless-controller is selected -->
             <div id="ifWirelessController" style="display: none;">
@@ -207,6 +216,10 @@
                     <div class = "col-sm-10">
                         <input type="text" class = "form-control" id = "model-active" placeholder="Model" name="model-active">
                     </div>
+                </div>
+                <div class = "form-group">
+                    <label class="control-label col-sm-2" class ="control-label col-sm-2" for="remarks-active">Remarks:</label>
+                    <input class="form-control input-lg" id="remarks-active" type="text">
                 </div>
             </div>
             <!-- to display if wireless-ap is selected -->
@@ -234,6 +247,10 @@
                             </select>
                     </div>
                 </div>
+                <div class = "form-group">
+                    <label class="control-label col-sm-2" class ="control-label col-sm-2" for="remarks-active">Remarks:</label>
+                    <input class="form-control input-lg" id="remarks-active" type="text">
+                </div>
             </div>
             <!-- to display if firewall is selected -->
             <div id = "ifFirewall" style="display: none;">
@@ -248,6 +265,10 @@
                     <div class = "col-sm-10">
                         <input type="text" class = "form-control" id = "model-active" placeholder="Enter Model" name="model-active">
                     </div>
+                </div>
+                <div class = "form-group">
+                    <label class="control-label col-sm-2" class ="control-label col-sm-2" for="remarks-active">Remarks:</label>
+                    <input class="form-control input-lg" id="remarks-active" type="text">
                 </div>
             </div>
             <!-- to display if ise is selected -->
@@ -264,6 +285,10 @@
                         <input type="text" class = "form-control" id = "model-active" placeholder="Enter Model" name="model-active">
                     </div>
                 </div>
+                <div class = "form-group">
+                    <label class="control-label col-sm-2" class ="control-label col-sm-2" for="remarks-active">Remarks:</label>
+                    <input class="form-control input-lg" id="remarks-active" type="text">
+                </div>
             </div>
             <!-- to display if nms is selected -->
             <div id = "ifNMS" style="display: none;">
@@ -278,6 +303,10 @@
                     <div class = "col-sm-10">
                         <input type="text" class = "form-control" id = "model-active" placeholder="Enter Model" name="model-active">
                     </div>
+                </div>
+                <div class = "form-group">
+                    <label class="control-label col-sm-2" class ="control-label col-sm-2" for="remarks-active">Remarks:</label>
+                    <input class="form-control input-lg" id="remarks-active" type="text">
                 </div>
             </div>
             <!-- to display if printer is selected -->
@@ -317,6 +346,10 @@
                         </select>
                     </div>
                 </div>
+                <div class = "form-group">
+                    <label class="control-label col-sm-2" class ="control-label col-sm-2" for="remarks-active">Remarks:</label>
+                    <input class="form-control input-lg" id="remarks-active" type="text">
+                </div>
             </div>
             <!-- to display if projector is selected -->
             <div id="ifProjector" style="display: none;">
@@ -344,6 +377,10 @@
                             </select>
                     </div>
                 </div>
+                <div class = "form-group">
+                    <label class="control-label col-sm-2" class ="control-label col-sm-2" for="remarks-active">Remarks:</label>
+                    <input class="form-control input-lg" id="remarks-active" type="text">
+                </div>
             </div>
             <!-- to display if ups is selected -->
             <div id = "ifUPS" style="display: none;">
@@ -365,12 +402,16 @@
                         <input type="number" class = "form-control" id = "type-active" placeholder="Rating(in VA)" name="type-active">
                     </div>
                 </div>
+                <div class = "form-group">
+                    <label class="control-label col-sm-2" class ="control-label col-sm-2" for="remarks-active">Remarks:</label>
+                    <input class="form-control input-lg" id="remarks-active" type="text">
+                </div>
             </div>
 
             </div>          
 
           <!-- to display if active-computers is selected -->
-          <div id = "ifComputers" style = "display:none;">
+          <div id = "ifComputers" style="display:none;">
             <div class = "form-group">
                 <label for="type-computers" class ="control-label col-sm-2">Type: </label>
                 <div class = "col-sm-10">
@@ -445,25 +486,48 @@
                         <input type="text" class = "form-control" id = "os-computers" placeholder="WindowsXP/ Windows10/ Ubuntu18.04 ..." name="os-computers">
                     </div>
             </div>
+            <div class = "form-group">
+                <label class="control-label col-sm-2" class ="control-label col-sm-2" for="remarks-computers">Remarks:</label>
+                <input class="form-control input-lg" id="remarks-computers" type="text">
+            </div>
           </div>
 
-
-          <!-- to display if Passive is selected -->
-          <div id="ifPassive" style="display:none;">
-                <div class="form-group">
-                        <label class="control-label col-sm-2" for="name-passive">Select name of Asset:</label>
-                        <div class="col-sm-10">
-                                <select class="form-control" onChange="passiveTypeCheck(this);" >
-                                    <option value="" disabled selected>Select your option</option>
-                                    <option value = "cables">Cables</option>
-                                    <option value = "hardware">Hardware</option>
-                                  </select>
+          <!-- to display if passive-hardware is selected -->
+          <div id="ifPassiveHardware" style="display:none;"> 
+                <div class = "form-group">
+                        <label class="control-label col-sm-2" for="name-hardware">Name: </label>
+                        <div class="col-sm-10">          
+                            <input type="text" class="form-control" id="name-hardware" placeholder="Name" name="name-hardware">
                         </div>
                 </div>
-          
+                <div class = "form-group">
+                        <label class="control-label col-sm-2" for="port-hardware">Ports: </label>
+                        <div class="col-sm-10">          
+                            <input type="text" class="form-control" id="port-hardware" placeholder="No. of Ports" name="ports-hardware">
+                        </div>
+                  </div>
+                  <div class = "form-group">
+                        <label class="control-label col-sm-2" for="mode-cable">Size: </label>
+                        <div class="col-sm-10">          
+                            <input type="text" class="form-control" id="size-hardware" placeholder="Size" name="size-hardware">
+                        </div>
+                  </div>
+                  <div class = "form-group">
+                        <label class="control-label col-sm-2" for="type-hardware">Type: </label>
+                        <div class="col-sm-10">          
+                            <input type="text" class="form-control" id="type-hardware" placeholder="Type" name="type-hardware">
+                        </div>
+                  </div>
+                  <div class = "form-group">
+                        <label class="control-label col-sm-2" class ="control-label col-sm-2" for="remarks">Remarks:</label>
+                        <!-- <textarea class="form-control" rows="5" id="remarks"></textarea> -->
+                        <input class="form-control input-lg" id="remarks-hardware" type="text">
+                </div>
 
-          <!-- to display if cables is selected -->
-          <div id = "ifCables" style="display:none;">
+          </div>
+
+          <!-- to display if passive-cables is selected -->
+          <div id="ifPassiveCables" style="display:none;">
               <div class = "form-group">
                     <label class = "control-label col-sm-2" for="type-cable"> Select type of Cable: </label>
                     <div class="col-sm-10">
@@ -526,40 +590,6 @@
             </div>
           </div>
 
-          <!-- if hardware is selected -->
-          <div id = "ifHardware" style = "display:none;">
-                <div class = "form-group">
-                        <label class="control-label col-sm-2" for="name-hardware">Name: </label>
-                        <div class="col-sm-10">          
-                            <input type="text" class="form-control" id="name-hardware" placeholder="Name" name="name-hardware">
-                        </div>
-                </div>
-                <div class = "form-group">
-                        <label class="control-label col-sm-2" for="port-hardware">Ports: </label>
-                        <div class="col-sm-10">          
-                            <input type="text" class="form-control" id="port-hardware" placeholder="No. of Ports" name="ports-hardware">
-                        </div>
-                  </div>
-                  <div class = "form-group">
-                        <label class="control-label col-sm-2" for="mode-cable">Size: </label>
-                        <div class="col-sm-10">          
-                            <input type="text" class="form-control" id="size-hardware" placeholder="Size" name="size-hardware">
-                        </div>
-                  </div>
-                  <div class = "form-group">
-                        <label class="control-label col-sm-2" for="type-hardware">Type: </label>
-                        <div class="col-sm-10">          
-                            <input type="text" class="form-control" id="type-hardware" placeholder="Type" name="type-hardware">
-                        </div>
-                  </div>
-                  <div class = "form-group">
-                        <label class="control-label col-sm-2" class ="control-label col-sm-2" for="remarks">Remarks:</label>
-                        <!-- <textarea class="form-control" rows="5" id="remarks"></textarea> -->
-                        <input class="form-control input-lg" id="remarks-hardware" type="text">
-                </div>
-
-          </div>
-        </div>
           <!-- submit -->
           <div class="form-group">        
             <div class="col-sm-offset-2 col-sm-10">
