../retrieval to ../retrieve-asset

--- a/new-asset/input.html
+++ b/new-asset/input.html
@@ -46,10 +46,10 @@
         <br>
         <h3>View Database: </h3>
         <div class="btn-group btn-group-justified">
-                <a href="../retrieval/networkingdevices.php" class="btn btn-primary">Active</a>
-                <a href="../retrieval/computer.php" class="btn btn-primary">Computers</a>
-                <a href="../retrieval/cables.php" class="btn btn-primary">Cables</a>
-                <a href="../retrieval/otherhardware.php" class="btn btn-primary">Other Hardware</a>
+                <a href="../retrieve-asset/networkingdevices.php" class="btn btn-primary">Active</a>
+                <a href="../retrieve-asset/computer.php" class="btn btn-primary">Computers</a>
+                <a href="../retrieve-asset/cables.php" class="btn btn-primary">Cables</a>
+                <a href="../retrieve-asset/otherhardware.php" class="btn btn-primary">Other Hardware</a>
         </div>
     </div>
 </body>
