--- a/new-asset/ups.html
+++ b/new-asset/ups.html
@@ -51,10 +51,11 @@
             <div class="form-group">
                 <label class="control-label col-sm-2">Remarks:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" name="remarksactive" required>
+                    <input type="text" class="form-control" name="remarksactive">
                 </div>
             </div>
             <input type="hidden" name="functionactive" value="" />
+            
             <!-- submit -->
             <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-10">
