--- a/new-asset/Servers.html
+++ b/new-asset/Servers.html
@@ -46,21 +46,26 @@
             <div class="form-group">
                 <label class="control-label col-sm-2">Type:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" name="modelactive" required>
+                    <!-- <input type="text" class="form-control" name="modelactive" required> -->
+                    <select name="modelactive" class="form-control">
+                        <option value="" disabled selected>Select an option</option>
+                        <option value="rack">Rack Server</option>
+                        <option value="tower">Tower Server</option>
+                    </select>
                 </div>
             </div>
 
             <div class="form-group">
-                <label class="control-label col-sm-2">Specification:</label>
+                <label class="control-label col-sm-2">Generation:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" name="functionactive" id="functionactive" onblur="checkField(this)" required>
+                    <input type="number" class="form-control" name="functionactive" >
                 </div>
             </div>
 
             <div class="form-group">
                 <label class="control-label col-sm-2">Remarks:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" name="remarksactive" required>
+                    <input type="text" class="form-control" name="remarksactive" >
                 </div>
             </div>
 
