--- a/new-asset/Switches.html
+++ b/new-asset/Switches.html
@@ -37,7 +37,7 @@
             <div class="form-group">
                     <label class="control-label col-sm-2">Remarks:</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" name="remarksactive" required>
+                        <input type="text" class="form-control" name="remarksactive">
                     </div>
             </div>
             <div class="form-group">
