--- a/new-asset/firewall.html
+++ b/new-asset/firewall.html
@@ -46,7 +46,7 @@
             <div class="form-group">
                 <label class="control-label col-sm-2">Remarks:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" name="remarksactive" required>
+                    <input type="text" class="form-control" name="remarksactive">
                 </div>
             </div>
 
