--- a/new-asset/printer.html
+++ b/new-asset/printer.html
@@ -51,13 +51,18 @@
             <div class="form-group">
                     <label class="control-label col-sm-2">Functionality:</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" name="functionactive" required>
+                        <!-- <input type="text" class="form-control" name="functionactive" required> -->
+                        <select name="functionactive" class="form-control">
+                            <option value="scan+fax">Scan + Fax</option>
+                            <option value="fax">Fax</option>
+                            <option value="scan">Scan</option>
+                        </select>
                     </div>
             </div>
             <div class="form-group">
                 <label class="control-label col-sm-2">Remarks:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" name="remarksactive" required>
+                    <input type="text" class="form-control" name="remarksactive">
                 </div>
             </div>
 
@@ -67,6 +72,7 @@
                     <button type="submit" class="btn btn-success" name="submitform">Submit</button>
                 </div>
             </div>
+
         </form>
     </div>
 </body>
