--- a/new-asset/projector.html
+++ b/new-asset/projector.html
@@ -51,7 +51,7 @@
             <div class="form-group">
                 <label class="control-label col-sm-2">Remarks:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" name="remarksactive" required>
+                    <input type="text" class="form-control" name="remarksactive">
                 </div>
             </div>
             <input type="hidden" name="functionactive" value=""/>
