--- a/new-asset/wirelessap.html
+++ b/new-asset/wirelessap.html
@@ -39,7 +39,12 @@
                     <div class="form-group">
                             <label class="control-label col-sm-2">Type:</label>
                             <div class="col-sm-10">
-                                <input type="text" class="form-control" name="typeactive" required>
+                                <!-- <input type="text" class="form-control" name="typeactive" required> -->
+                                <select name="typeactive" class="form-control">
+                                    <option value="" selected disabled>Select:</option>
+                                    <option value="indoor">Indoor</option>
+                                    <option value="outdoor">Outdoor</option>
+                                </select>
                             </div>
                     </div>
                     <div class="form-group">
@@ -52,7 +57,7 @@
                     <div class="form-group">
                         <label class="control-label col-sm-2">Remarks:</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" name="remarksactive" required>
+                            <input type="text" class="form-control" name="remarksactive">
                         </div>
                     </div>
     
@@ -64,6 +69,5 @@
                     </div>
                 </form>
             </div>
-<form method="post" action="networkingphp.php">
 </body>
 </html> 
