--- a/updated-frontend-forms/wirelessc.html
+++ b/updated-frontend-forms/wirelessc.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
         function checkField(modelactive) {
             if (/[^0-9a-bA-B\s]/gi.test(modelactive.value)) {
                 alert("only alphanumeric characters spaces are valid");
@@ -17,7 +17,7 @@
                 return false;
             }
         }
-    </script>
+    </script> -->
     <title>Wireless Controller</title>
 </head>
 <body>
