--- a/updated-frontend-forms/wirelessap.html
+++ b/updated-frontend-forms/wirelessap.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script type= "text/javascript">
+    <!-- <script type= "text/javascript">
         function checkField(modelactive)
         {
         if (/^[0-9a-zA-Z]+$/.test(modelactive.value))
@@ -18,7 +18,7 @@
         return false;
         }
         }
-        </script>
+        </script> -->
     <title>Wireless AP</title>
 </head>
 
